# VehTrajOpt

./: .gitignore  CMakeLists.txt  README.md
data/: config.txt  config.yaml
data/20240919_traj_1_1/: log.txt  raw_traj_input.txt  track_vehicle_info.txt  track_vehicle_info_optimized.txt  vehicle_info.txt
data/example/: input.txt  log-analysis-diff.txt  log-auto-diff.txt  log.txt  output-auto-diff.txt  output.txt
demo/: # Question_curvefitting.md  auto_diff_demo.cpp  ceres_example.cpp  ceres_test.cpp  curve_fitting.cpp  vto_develop.cpp  vto_test.cpp
include/: NhcCostFunction.h  types.h  vto_ceres.h
scripts/: generate_data.py  generate_vehicle_traj.py  read_data.py  vto_prd_plot.py
src/: NhcCostFunction.cpp
